--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,53 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.form{
+  margin-top: 50px;
+}
+
+input{
+  padding: 8px 20px;
+  border: 1px solid rgb(8, 2, 7);
+  outline: 0;
+}
+button{
+  padding: 8px 20px;
+  border: 1px solid rgb(13, 1, 8);
+  outline: 0;
+  color: rgb(0, 6, 2);
+  cursor: pointer;
+}
+
+li{
+  list-style: none;
+  display: block;
+  border-bottom: 1px solid rgb(3, 18, 3);
+  margin-bottom: 18px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: .5px;
+}
+
+.edit{
+  margin-left: 20px;
+  margin-right: 20px;
+  background-color: green;
+  padding: 5px 10px;
+  color: #fff;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 10px!important;
+  display: inline-block;
+  cursor: pointer;
+}
+.delete{
+  background-color: rgb(255, 0, 0);
+  padding: 5px 10px;
+  color: #fff;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
